--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lit": "^3.3.0"
+    "lit": "^3.3.0",
+    "usbe-component": "github:lkingl123/usbe-component"
   },
   "devDependencies": {
     "typescript": "~5.8.3",
