--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "usbe-component": "github:lkingl123/usbe-component"
   },
   "devDependencies": {
-    "typescript": "~5.8.3",
+    "typescript": "^5.2.0",
     "vite": "^6.3.5"
   }
 }
